# aic

./: .clang-format  .gitignore  CheatCode_sampling.sh  Makefile.lambda  README.md  aic.repos  ieec.repos  participant.repos  pixi.toml  pixi_env_setup.sh  pyrightconfig.json  robostack_mapping.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  build_aic_eval_image.yml  pixi.yml  style.yml
.ipynb_checkpoints/: CLAUDE-checkpoint.md
aic_adapter/: CMakeLists.txt  package.xml
aic_adapter/src/: aic_adapter.cpp
aic_assets/: CMakeLists.txt  package.xml
aic_assets/hooks/: aic_assets.dsv.in
aic_assets/scripts/: cable.sdf.erb
aic_bringup/: CMakeLists.txt  README.md  package.xml
aic_bringup/config/: aic_ros2_controllers.yaml  ros_gz_bridge_config.yaml
aic_bringup/hooks/: gz_config_path.dsv.in
aic_bringup/launch/: aic_gz_bringup.launch.py  gripper_action.launch.py  move_to_contact.launch.py  spawn_cable.launch.py  spawn_task_board.launch.py
aic_bringup/rviz/: aic.rviz
aic_bringup/scripts/: gripper_action.py  home_robot.py  move_to_contact.py  teleop_keyboard.py  test_impedance.py
aic_controller/: CMakeLists.txt  aic_controller_plugin.xml  package.xml
aic_controller/include/aic_controller/: aic_controller.hpp  cartesian_limits.hpp  cartesian_state.hpp  joint_state.hpp  utils.hpp
aic_controller/include/aic_controller/actions/: cartesian_impedance_action.hpp  gravity_compensation_action.hpp  joint_impedance_action.hpp
aic_controller/src/: aic_controller.cpp  aic_controller_parameters.yaml  cartesian_limits.cpp  cartesian_state.cpp  joint_state.cpp  utils.cpp
aic_controller/src/actions/: cartesian_impedance_action.cpp  gravity_compensation_action.cpp  joint_impedance_action.cpp
aic_description/: CMakeLists.txt  package.xml
aic_description/urdf/: cable.sdf.xacro  task_board.urdf.xacro  ur_gz.urdf.xacro
aic_description/world/: aic.sdf  eoat.sdf
aic_engine/: CMakeLists.txt  README.md  package.xml
aic_engine/config/: 10_nic_trials.yaml  10_sc_trials.yaml  10_trials_config.yaml  20_trials.yaml  50_pretrain.yaml  eval.yaml  eval_1.yaml  eval_2.yaml  eval_3.yaml  eval_sc_mixed_seed888_60.yaml  fail.yaml  generate_sc_evaluation_mixed_distractor.py  sample_config.yaml  sc_generation.py  test.yaml  train.yaml  train_50.yaml  val.yaml
aic_engine/src/: aic_engine.cpp  aic_engine.hpp  main.cpp
aic_example_policies/: README.md  package.xml  pixi.toml  setup.cfg  setup.py
aic_example_policies/utils/: wrench_smoother.py
aic_gazebo/: CMakeLists.txt  package.xml
aic_gazebo/include/aic_gazebo/: ScoringPlugin.hh
aic_gazebo/proto/: scoring.proto
aic_gazebo/src/: CablePlugin.cc  CablePlugin.hh  OffLimitContactsPlugin.cc  OffLimitContactsPlugin.hh  ResetJointsPlugin.cc  ResetJointsPlugin.hh  ScoringPlugin.cc  WorldSdfGeneratorPlugin.cc  WorldSdfGeneratorPlugin.hh
aic_interfaces/: CMakeLists.txt  README.md  package.xml
aic_interfaces/action/: InsertCable.action
aic_interfaces/aic_control_interfaces/: CMakeLists.txt  package.xml  pixi.toml
aic_interfaces/aic_control_interfaces/msg/: ControllerState.msg  JointMotionUpdate.msg  MotionUpdate.msg  TargetMode.msg  TrajectoryGenerationMode.msg
aic_interfaces/aic_control_interfaces/srv/: ChangeTargetMode.srv
aic_interfaces/aic_engine_interfaces/: CMakeLists.txt  package.xml
aic_interfaces/aic_engine_interfaces/srv/: ResetJoints.srv
aic_interfaces/aic_model_interfaces/: CMakeLists.txt  package.xml
aic_interfaces/aic_model_interfaces/msg/: Observation.msg
aic_interfaces/aic_task_interfaces/: CMakeLists.txt  package.xml
aic_interfaces/aic_task_interfaces/msg/: Task.msg
aic_model/: files.txt  package.xml  pixi.toml  setup.cfg  setup.py
aic_model/aic_model/: aic_model.py  model.py  model_node.py  policy.py  policy_ros.py
aic_model/test/: cancel_task.py  create_and_cancel_task.py  cycle_through_lifecycle.py
aic_scoring/: CMakeLists.txt  package.xml
aic_scoring/config/: tier1.yaml  tier2.yaml
aic_scoring/include/aic_scoring/: ScoringTier1.hh  ScoringTier2.hh  TierScore.hh
aic_scoring/src/: ScoringTier1.cc  ScoringTier1_main.cc  ScoringTier2.cc  ScoringTier2_main.cc
aic_utils/aic_lerobot_tools/: README.md  package.xml  setup.py
aic_utils/aic_lerobot_tools/bag_to_lerobot/: __main__.py  decoders.py
aic_utils/aic_lerobot_tools/bag_to_lerobot/upstream/: bag_to_lerobot.py
aic_utils/aic_lerobot_tools/contracts/: aic_phase0.yaml
aic_utils/aic_lerobot_tools/scripts/: bag_to_lerobot
aic_utils/aic_training_utils/: CMakeLists.txt  package.xml
aic_utils/aic_training_utils/launch/: aic_training_gz_bringup.launch.py
aic_utils/aic_training_utils/scripts/: xacro_expander.py
aic_utils/lerobot_robot_aic/: README.md  main.py  package.xml  pixi.toml  setup.py
aic_utils/lerobot_robot_aic/lerobot_robot_aic/: __init__.py  aic_robot.py  aic_robot_aic_controller.py  aic_robot_ros2_control.py  aic_teleop.py  spacemouse_teleop.py  types.py
aic_utils/lerobot_robot_aic/scripts/: normalize.py
docker/: docker-compose.yaml
docs/: access_control.md  aic_controller.md  aic_interfaces.md  build_eval.md  challenge_rules.md  custom_dockerfile.md  getting_started.md  glossary.md  lambda_fleet.md  lambda_headless_setup.md  overview.md  participant_utilities.md  phases.md  policy.md  qualification_phase.md  scene_description.md  scoring.md  scoring_tests.md  submission.md  task_board_description.md  troubleshooting.md  zenoh_acl.md
ieec_assets/: CMakeLists.txt  package.xml
ieec_bringup/: CMakeLists.txt  package.xml
ieec_bringup/config/: ieec_ros2_controllers.yaml
ieec_bringup/launch/: ieec_gz_bringup.launch.py
ieec_bringup/rviz/: ieec.rviz
ieec_description/: CMakeLists.txt  package.xml
score/: scoring.yaml  train_50_scoring.yaml
scripts/: check_dedup.py  check_rtf.py  image_relay_node.py  inspect_events.py  lambda_bootstrap.sh  lambda_fleet.py  mcap_to_lerobot.py  mcap_to_lerobot_trimmed.py  merge_scores.py  pick_failed_trials.py  requirements.txt  run_parallel.sh  run_parallel_multi.sh  setup_workers.sh  split_trials.py  train_lambda.sh  val_loss_sidecar.py
(+138 files in other folders)
