<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_description</name>
  <version>0.0.1</version>
  <description>This package contains the scene description for the challenge</description>
  <maintainer email="yadunund@intrinsic.ai">Yadunund Vijay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aic_assets</exec_depend>
  <exec_depend>aic_gazebo</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
