<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_model</name>
  <version>0.0.0</version>
  <description>Python node which wraps a control model for the AI Challenge</description>
  <maintainer email="morganquigley@intrinsic.ai">Morgan Quigley</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>aic_model_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
