<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_lerobot_tools</name>
  <version>0.0.1</version>
  <description>This package contains tools to work with LeRobot for the challenge</description>
  <maintainer email="koonpeng@intrinsic.ai">Teo Koon Peng</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>rosetta</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
