<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aic_training_utils</name>
  <version>0.0.1</version>
  <description>Training-oriented bringup utilities for the AI Challenge</description>
  <maintainer email="yadunund@intrinsic.ai">Yadunund Vijay</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aic_bringup</exec_depend>
  <exec_depend>aic_training_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
