<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_robot_aic</name>
  <version>0.0.1</version>
  <description>LeRobot driver for AIC</description>
  <maintainer email="koonpeng@intrinsic.ai">Teo Koon Peng</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>aic_control_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
